docs/api/qiskit/0.43/qiskit.algorithms.NumPyEigensolver.mdx
---
title: NumPyEigensolver
description: API reference for qiskit.algorithms.NumPyEigensolver
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.NumPyEigensolver
---

# NumPyEigensolver

<Class id="qiskit.algorithms.NumPyEigensolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/eigen_solvers/numpy_eigen_solver.py" signature="NumPyEigensolver(k=1, filter_criterion=None)">
  Bases: [`Eigensolver`](qiskit.algorithms.Eigensolver "qiskit.algorithms.eigen_solvers.eigen_solver.Eigensolver")

  Deprecated: NumPy Eigensolver algorithm.

  The NumPyEigensolver class has been superseded by the [`qiskit.algorithms.eigensolvers.NumPyEigensolver`](qiskit.algorithms.eigensolvers.NumPyEigensolver "qiskit.algorithms.eigensolvers.NumPyEigensolver") class. This class will be deprecated in a future release and subsequently removed after that.

  NumPy Eigensolver computes up to the first $k$ eigenvalues of a complex-valued square matrix of dimension $n \times n$, with $k \leq n$.

  <Admonition title="Note" type="note">
    Operators are automatically converted to SciPy’s `spmatrix` as needed and this conversion can be costly in terms of memory and performance as the operator size, mostly in terms of number of qubits it represents, gets larger.
  </Admonition>

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.eigen_solvers.numpy_eigen_solver.NumPyEigensolver` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class `qiskit.algorithms.eigensolvers.NumPyEigensolver`. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  **Parameters**

  *   **k** (*int*) – How many eigenvalues are to be computed, has a min. value of 1.
  *   **filter\_criterion** (*Callable\[\[list | np.ndarray, float, ListOrDict\[float] | None], bool]*) – callable that allows to filter eigenvalues/eigenstates, only feasible eigenstates are returned in the results. The callable has the signature filter(eigenstate, eigenvalue, aux\_values) and must return a boolean to indicate whether to keep this value in the final returned result or not. If the number of elements that satisfies the criterion is smaller than k then the returned list has fewer elements and can even be empty.

  ## Methods

  <span id="qiskit-algorithms-numpyeigensolver-compute-eigenvalues" />

  ### compute\_eigenvalues

  <Function id="qiskit.algorithms.NumPyEigensolver.compute_eigenvalues" name="compute_eigenvalues" signature="NumPyEigensolver.compute_eigenvalues(operator, aux_operators=None)">
    Computes eigenvalues. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **aux\_operators** (*ListOrDict\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*] | None*) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Returns**

    EigensolverResult

    **Return type**

    [EigensolverResult](qiskit.algorithms.EigensolverResult "qiskit.algorithms.EigensolverResult")
  </Function>

  <span id="qiskit-algorithms-numpyeigensolver-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.NumPyEigensolver.supports_aux_operators" name="supports_aux_operators" signature="classmethod NumPyEigensolver.supports_aux_operators()">
    Whether computing the expectation value of auxiliary operators is supported.

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise

    **Return type**

    bool
  </Function>

  ## Attributes

  ### filter\_criterion

  <Attribute id="qiskit.algorithms.NumPyEigensolver.filter_criterion" name="filter_criterion">
    returns the filter criterion if set
  </Attribute>

  ### k

  <Attribute id="qiskit.algorithms.NumPyEigensolver.k" name="k">
    returns k (number of eigenvalues requested)
  </Attribute>
</Class>

